sandbox/output
GildedRose.java:11: error: cannot find symbol
            itemStrategy.handle(items[i]);
            ^
  symbol:   variable itemStrategy
  location: class GildedRose
1 error
